bug PRD Reviewer: Lynn Comment: adjusted the file title and path spacing on the share dialog

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -634,7 +634,7 @@
 .shareThisDlg_HeaderPanel
 {
 	position: relative;
-	margin-bottom: 5px;
+	margin-bottom: 15px;
 }
 
 .shareThisDlg_HeaderPanel img
@@ -653,6 +653,7 @@
 .shareThisDlg_HeaderNameLabel
 {
 	font-size: 1.2em;
+	line-height: 1.4em;
 	color: #1f1f1f;
 }
 
@@ -1681,10 +1682,10 @@ body, table td, select
 	font-weight: bold;
 	letter-spacing: 0.02em;
 	padding: 5px;
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-topright: 5px;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
 	-webkit-border-top-left-radius: 5px;
 	-webkit-border-top-right-radius: 5px;
 }
@@ -1694,8 +1695,8 @@ body, table td, select
 }
 .workspaceTreeControlHeader_closeButton
 {
-	-moz-border-radius: 15px;
 	border-radius: 15px;
+	-moz-border-radius: 15px;
 	-webkit-border-radius: 15px;
 	background: url(images/slice_blend_teal_27.png) repeat-x scroll 0 0 #81B2Bd;
 	border: 1px solid #60919C;
